<resources>
    <string name="app_name">OCBCBank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="your_transaction_history">Your transaction history</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="logout">Logout</string>
    <string name="repassword">Confirm Password</string>
</resources>